Bug 12444 - Long attribute names doesn't fit to the drop-down box

--- a/skins/retail/css/products.css
+++ b/skins/retail/css/products.css
@@ -254,7 +254,7 @@
 /* for tablets */
 @media only screen and (min-device-width: 768px) and (max-device-width : 1024px) and (orientation: portrait) {
     .product_attribute_info .modifiers_classes_title, .product_attribute_info select {
-        max-width: 230px !important;
+        max-width: 240px !important;
     }
 }
 @media only screen and (min-device-width: 768px) and (max-device-width : 1024px) and (orientation: landscape) {
@@ -267,6 +267,6 @@
         width: 137px !important;
     }
     .product_attribute_info .modifiers_classes_title, .product_attribute_info select {
-        max-width: 300px !important;
+        max-width: 310px !important;
     }
 }
